change preprint to vldb link

--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
   <!-- <p>Names of myself are highlighted with <u>underline</u>.</p> -->
   <ul>
     <li>
-      <b>Tabular: Efficiently Building Efficient Indexes</b>
-      <a href="https://www.cs.sfu.ca/~tzwang/tabular.pdf">[preprint]</a>
+      <a href="https://www.vldb.org/pvldb/vol18/p1991-yan.pdf">Tabular: Efficiently Building Efficient Indexes</a>
       <a href="https://github.com/sfu-dis/tabular">[code]</a><br>
       Ziyi Yan, <u>Mohamed Farouk Drira </u>, Tianxun Hu, Tianzheng Wang.<br>
       <b>VLDB 2025</b>
