--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       height: auto;
       border-radius: 4px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      margin-top: 55px;
     }
     
     /* .profile-img {
